--- a/media.css
+++ b/media.css
@@ -42,6 +42,13 @@
     .content__iframe{
         display: none;
     }
+    .content__btn{
+        display: block;
+    }
+    .contacts__content{
+        flex-direction: column;
+        align-items: center;
+    }
 }
 @media (max-width:800px){
     .body__main{
